<resources>
    <string name="app_name">TendableTest</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="start_inspection">Start Inspection</string>
    <string name="save_draft">Save Draft</string>
    <string name="submit">Submit</string>
    <string name="dont_have_account">Don\'t have account? Register</string>
    <string name="already_have_account">Already have an account? Login</string>

    <string name="inspection_saved">Inspection saved successfully.</string>

    <string name="email_error">Email is empty.</string>
    <string name="password_error">Password is empty.</string>

    <string name="my_preference">MyPreference</string>

    <string name="something_went_wrong">Something went wrong.</string>

    <string name="register_successfully">Registered Successfully.</string>
    <string name="inspection_submitted_successfully">Inspection Submitted Successfully.</string>
</resources>