<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen_bg"
    tools:context=".ui.MainActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvInspection"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnSaveDraft"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btnSaveDraft"
        android:textSize="@dimen/_12sdp"
        android:layout_margin="@dimen/_8sdp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/save_draft"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnSubmit"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/btnSubmit"
        android:textSize="@dimen/_12sdp"
        android:layout_margin="@dimen/_8sdp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        app:layout_constraintStart_toEndOf="@+id/btnSaveDraft"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/btnSaveDraft"
        app:layout_constraintTop_toTopOf="@id/btnSaveDraft" />

    <androidx.constraintlayout.widget.Group
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/grpInspection"
        android:visibility="gone"
        app:constraint_referenced_ids="btnSaveDraft,btnSubmit,rvInspection"/>

    <Button
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/btnStartInspection"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="@dimen/_12sdp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/start_inspection"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

</layout>